# lexicode

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LexiCode.spec  README.md  idea.md  prd.md  pyproject.toml  render.yaml  requirements-web.txt  requirements.txt  tasks.md  tech-stack.md  user-flow.md
agents/: README.md
assets/: README.md
features/: README.md  __init__.py  app.py  config.py  desktop_launcher.py  words.py  words_cs.py
features/services/: __init__.py  tts_service.py
features/templates/: index.html
features/tests/: test_api.py
features/utils/: __init__.py  responses.py
installer/: LexiCode.iss
