[project]
name = "lexicode"
version = "1.2.0"
description = "Dyslexia-friendly English learning desktop app for CS and daily vocabulary practice"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = [".", "features"]
testpaths = ["features/tests"]
python_files = ["test_*.py"]
addopts = "-q -p no:cacheprovider"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
